snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.module.sha512
8d77a2a7ad6414432777ffa767edf45df342ae4379122c9491c6f562fd3d440843c6835e98ba2ab4f2e9367eb367ac52b676559d74b95b1c0475a2919db9cb7a